--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
-version: '3.8'
+version: "3.8"
 
 services:
-
   mongo:
     image: mongo
     restart: always
@@ -11,7 +10,7 @@ services:
     volumes:
       - backend:/data/db
     networks:
-      - backend 
+      - backend
 
   mongo-express:
     image: mongo-express
@@ -20,32 +19,28 @@ services:
       - 8081:8081
     depends_on: ["mongo"]
     environment:
-    #   - ME_CONFIG_MONGODB_ADMINUSERNAME:admin
-    #   - ME_CONFIG_MONGODB_ADMINPASSWORD:password
-      - ME_CONFIG_MONGODB_SERVER:mongo 
+      #   - ME_CONFIG_MONGODB_ADMINUSERNAME:admin
+      #   - ME_CONFIG_MONGODB_ADMINPASSWORD:password
+      - ME_CONFIG_MONGODB_SERVER:mongo
     networks:
-      - backend 
-
+      - backend
 
   app:
     build:
       context: ./
       dockerfile: ./Dockerfile
     ports:
-        - "8082:8082"
+      - "8082:8000"
     restart: always
-    depends_on:
-       ["mongo"] 
+    depends_on: ["mongo"]
     volumes:
       - backend:/goapp/volumes
     networks:
-      - backend 
+      - backend
 
 volumes:
   backend:
     external: true
 networks:
   backend:
-    external: true 
-        
-    
+    external: true
